[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Lake/lake.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Lake/Lake.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 35.8918
height = 194.902

[sub_resource type="CapsuleShape2D" id=2]
radius = 26.0
height = 132.0

[node name="Lake" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.57196
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
rotation = 1.5708
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
